[tool.poetry]
name = "natluk_fastapi_1"
version = "0.1.0"
description = ""
authors = ["<binq661@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {version="==1.8.2", extras=["email"]}
fastapi = "^0.70.0"
uvicorn = "^0.16.0"
SQLAlchemy = "==1.4.27"
alembic = "==1.7.5"
psycopg2-binary = "==2.9.2"
passlib = "==1.7.4"
python-dotenv = "0.19.2"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
ipdb = "*"
pylint = "*"
flake8 = "*"


[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'


[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
